--- a/R.I.M. UI Shell/RIMUI.resx
+++ b/R.I.M. UI Shell/RIMUI.resx
@@ -169,4 +169,7 @@
   <metadata name="UART_COM.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>141, 17</value>
   </metadata>
+  <metadata name="Encoder_FetchTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>256, 17</value>
+  </metadata>
 </root>
